nav not showing up, changed postion to fixed, it was relative

--- a/src/styles/components/Navbar.module.scss
+++ b/src/styles/components/Navbar.module.scss
@@ -1,8 +1,8 @@
 @use '../base' as *;
 .navbar {
-  position: relative;
+  position: fixed;
   transform: translateY(0);
-  margin: 0;
+  margin: 54px 0 0 0;
   padding: 0;
   width: 100%;
   z-index: 999;
