--- a/src/styles/components/TopMenu.module.scss
+++ b/src/styles/components/TopMenu.module.scss
@@ -2,7 +2,8 @@
     position: relative;
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-between;
+    padding: 0 3rem;
     width: 100%;
     height: 54px;
     background-color: #1b1b1b;
@@ -10,5 +11,6 @@
 }
 
 .subtitle {
+    font-family: inherit;
     color: white;
 }
